# decky-led-control

./: .gitignore  README.md  backend.py  main.py  package.json  plugin.json  pnpm-lock.yaml
backend/: Cargo.toml  Dockerfile  Makefile  backend.csproj  entrypoint.sh
backend/src/: main.rs  utils.rs
src/: index.tsx
